expended venv show_category

--- a/women/templates/women/index.html
+++ b/women/templates/women/index.html
@@ -3,7 +3,11 @@
 {% block content %}
 <ul class="list-articles">
 	{% for p in posts %}
-			<li><h2>{{p.title}}</h2>
+			<li><div class="aricle-panel">
+				<p class="first">Категория: {{p.cat}}</p>
+				<p class="last">Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</p>
+			</div>
+				<h2>{{p.title}}</h2>
 	{% autoescape on %}
 	{{p.content|linebreaks|truncatewords:50}}
 	{% endautoescape %}
