new post with photo through admin

--- a/women/templates/women/index.html
+++ b/women/templates/women/index.html
@@ -7,6 +7,10 @@
 				<p class="first">Категория: {{p.cat}}</p>
 				<p class="last">Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</p>
 			</div>
+{% if p.photo %}
+	<p><img class="img-article-left thumb" src="{{p.photo.url}}"></p>
+{% endif %}
+
 				<h2>{{p.title}}</h2>
 	{% autoescape on %}
 	{{p.content|linebreaks|truncatewords:50}}
