--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load women_tags %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,6 +33,7 @@
 <tr>
 <!-- Sidebar слева -->
 	<td valign="top" class="left-chapters">
+		{% get_categories as categories %}
 	<ul id="leftchapters">
 {% if cat_selected == 0 %}
 		<li class="selected">Все категории</li>
@@ -39,7 +41,7 @@
 		<li><a href="{% url 'home' %}">Все категории</a></li>
 {% endif %}
 
-{% for c in cats %}
+{% for c in categories %}
 		{% if c.pk == cat_selected %}
 			<li class="selected">{{c.name}}</li>
 		{% else %}
