--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -33,7 +33,7 @@
 <tr>
 <!-- Sidebar слева -->
 	<td valign="top" class="left-chapters">
-		{% get_categories as categories %}
+
 	<ul id="leftchapters">
 {% if cat_selected == 0 %}
 		<li class="selected">Все категории</li>
@@ -41,13 +41,8 @@
 		<li><a href="{% url 'home' %}">Все категории</a></li>
 {% endif %}
 
-{% for c in categories %}
-		{% if c.pk == cat_selected %}
-			<li class="selected">{{c.name}}</li>
-		{% else %}
-			<li><a href="{{c.get_absolute_url}}">{{c.name}}</a></li>
-		{% endif %}
-{% endfor %}
+{% show_categories 'name' cat_selected %}
+
 		<li class="share">
 		<p>Наш канал</p>
 		<a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>
