--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -41,7 +41,15 @@
 		<li><a href="{% url 'home' %}">Все категории</a></li>
 {% endif %}
 
-{% show_categories 'name' cat_selected %}
+{% for c in cats %}
+{% if c.women__count > 0 %}
+	{% if c.pk == cat_selected %}
+		<li class="selected">{{c.name}}</li>
+	{% else %}
+		<li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
+	{% endif %}
+{% endif %}
+{% endfor %}
 
 		<li class="share">
 		<p>Наш канал</p>
