added pagination for main page and for categories

--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -33,7 +33,6 @@
 <tr>
 <!-- Sidebar слева -->
 	<td valign="top" class="left-chapters">
-
 	<ul id="leftchapters">
 {% if cat_selected == 0 %}
 		<li class="selected">Все категории</li>
@@ -51,6 +50,7 @@
 {% endif %}
 {% endfor %}
 
+
 		<li class="share">
 		<p>Наш канал</p>
 		<a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>
@@ -67,6 +67,34 @@
 	<div class="content-text">
 {% block content %}
 {% endblock %}
+{% if page_obj.has_other_pages %}
+<nav class="list-pages">
+    <ul>
+{% if page_obj.has_previous %}
+<li class="page-num">
+	<a href="?page={{ page_obj.previous_page_number }}">&lt;</a>
+</li>
+{% endif %}
+
+        {% for p in paginator.page_range %}
+		{% if page_obj.number == p %}
+        <li class="page-num page-num-selected">{{ p }}</li>
+		{% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2  %}
+        <li class="page-num">
+            <a href="?page={{ p }}">{{ p }}</a>
+        </li>
+		{% endif %}
+        {% endfor %}
+
+{% if page_obj.has_next %}
+<li class="page-num">
+	<a href="?page={{ page_obj.next_page_number }}">&gt;</a>
+</li>
+{% endif %}
+
+    </ul>
+</nav>
+{% endif %}
 	</div>
 <!-- Конец блока контента -->
 
