--- a/women/templates/women/register.html
+++ b/women/templates/women/register.html
@@ -4,13 +4,13 @@
 <h1>{{title}}</h1>
 
 <form method="post">
-  {%csrf_token %}
+    {% csrf_token %}
 
-  {% for f in form %}
-  <p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}</label>{{ f }}</p>
-  <div class="form-error">{{ f.errors }}</div>
-  {% endfor %}
+{% for f in form %}
+<p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+<div class="form-error">{{ f.errors }}</div>
+{% endfor %}
 
-  <button type="sumbit">Регистрация</button>
+    <button type="submit">Регистрация</button>
 </form>
 {% endblock %}
