added login form

--- a/women/templates/women/login.html
+++ b/women/templates/women/login.html
@@ -5,7 +5,12 @@
 
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    <div class="form-error">{{ form.non.field_errors }}</div>
+
+    {% for f in form %}
+    <p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+    <div class="form-error">{{ f.errors }}</div>
+    {% endfor %}
     <button type="sumbit">Войти</button>
 </form>
 
