--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -19,7 +19,11 @@
 {% for m in menu %}
 	<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
 {% endfor %}
+			{% if request.user.is_authenticated %}
+			<li class="last">{{ user.username }} | <a href="{% url 'logout' %}">Выйти</a></li>
+			{% else %}
 			<li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a href="{% url 'login' %}">Войти</a></li>
+			{% endif %}
 			</ul>
 			<div class="clear"></div>
 		</div>
